--- a/static/css/simple-sidebar.css
+++ b/static/css/simple-sidebar.css
@@ -41,13 +41,13 @@
     width: 250px;
 }
 
-#page-content-wrapper {
+.page-content-wrapper {
     width: 100%;
     position: absolute;
     padding: 15px;
 }
 
-#wrapper.toggled #page-content-wrapper {
+#wrapper.toggled .page-content-wrapper {
     position: absolute;
     margin-right: -250px;
 }
@@ -117,12 +117,12 @@
         width: 0;
     }
 
-    #page-content-wrapper {
+    .page-content-wrapper {
         padding: 20px;
         position: relative;
     }
 
-    #wrapper.toggled #page-content-wrapper {
+    #wrapper.toggled .page-content-wrapper {
         position: relative;
         margin-right: 0;
     }
