a lot of changes: interface, spark, indexes and others

--- a/data_upload/templates/upload_metadata.html
+++ b/data_upload/templates/upload_metadata.html
@@ -91,21 +91,21 @@
                                 <div class="form-group">
                                     <label class="col-md-4 control-label" for="title">Título</label>
                                     <div class="col-md-4">
-                                        <input id="title" name="title" type="text" placeholder="" class="form-control input-md">
+                                        <input id="title" name="title" type="text" placeholder="" class="form-control input-title">
                                     </div>
                                 </div>
                                 <!-- Text input-->
                                 <div class="form-group">
                                     <label class="col-md-4 control-label" for="description">Descrição</label>
                                     <div class="col-md-4">
-                                        <textarea id="descriptionId" name="description" form_id="metadataFormId" rows="6" cols="36"> </textarea>
+                                        <textarea id="descriptionId" name="description" form_id="metadataFormId" rows="6" cols="44"> </textarea>
                                     </div>
                                 </div>
                                 <!-- Text input-->
                                 <div class="form-group">
                                     <label class="col-md-4 control-label" for="source">Fonte</label>
-                                    <div class="col-md-5">
-                                        <input id="source" name="source" type="text" placeholder="" class="form-control input-md" required="">
+                                    <div class="col-md-4">
+                                        <input id="source" name="source" type="text" placeholder="" class="form-control input-title" required="">
                                         <span class="help-block">Utilze preferencialmente uma URL. Ex.: dados.gov.br</span>
                                     </div>
                                 </div>
@@ -152,7 +152,7 @@
                                 {% endfor %}
                                 <br>
                                 <!-- Button -->
-                                <div class="buttons">
+                                <div class="nav-bar-fixed-bottom buttons">
                                     <div class="form-group separate-buttons-right">
                                         <label class="col-md-4 control-label" for="goBackToSecondStep"></label>
                                         <div class="col-md-4">
@@ -166,7 +166,6 @@
                                         </div>
                                     </div>
                                 </div>
-
                             </fieldset>
                         </div>
                     </div>
