--- a/data_upload/templates/upload_metadata.html
+++ b/data_upload/templates/upload_metadata.html
@@ -19,6 +19,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.5/css/bootstrap.min.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.3/css/select2.min.css" rel="stylesheet" />
     <link href="{% static 'bootstrap-treeview.min.css'%}" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap3-dialog/1.34.7/css/bootstrap-dialog.min.css">
+
 
 </head>
 
@@ -241,16 +243,19 @@
 
 
     <script src="{% static 'jquery.js' %}"></script>
-    <script src="{% static 'bootstrap.min.js' %}"></script>
     <script src="{% static 'dropzone.js' %}"></script>
     <script src="{% static 'jquery_dropzone.js' %}"></script>
     <script src="{% static 'bootstrap-table.js' %}"></script>
     <script src="{% static 'bootstrap-table-editable.min.js' %}"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.3/js/select2.min.js"></script>
-    <script src="{% static 'custom.js' %}"></script>
+    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
     <script src="{% static 'bootstrap-treeview.min.js' %}"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap3-dialog/1.34.7/js/bootstrap-dialog.min.js"></script>
+    <script src="{% static 'bootstrap-waitingfor.min.js' %}"></script>
+    <script src="{% static 'custom.js' %}"></script>
     <script src="https://use.fontawesome.com/b4043f9797.js"></script>
+
 
 
 
