added check validity of fields

--- a/data_upload/templates/upload_metadata.html
+++ b/data_upload/templates/upload_metadata.html
@@ -93,21 +93,21 @@
                                 <div class="form-group">
                                     <label class="col-md-4 control-label" for="title">Título</label>
                                     <div class="col-md-4">
-                                        <input id="title" name="title" type="text" placeholder="" class="form-control input-title">
+                                        <input id="title" name="title" type="text" placeholder="" class="form-control input-title" required>
                                     </div>
                                 </div>
                                 <!-- Text input-->
                                 <div class="form-group">
                                     <label class="col-md-4 control-label" for="description">Descrição</label>
                                     <div class="col-md-4">
-                                        <textarea id="descriptionId" name="description" form_id="metadataFormId" rows="6" cols="44"> </textarea>
+                                        <textarea id="descriptionId" name="description" form_id="metadataFormId" rows="6" cols="44" required> </textarea>
                                     </div>
                                 </div>
                                 <!-- Text input-->
                                 <div class="form-group">
                                     <label class="col-md-4 control-label" for="source">Fonte</label>
                                     <div class="col-md-4">
-                                        <input id="source" name="source" type="text" placeholder="" class="form-control input-title" required="">
+                                        <input id="source" name="source" type="text" placeholder="" class="form-control input-title" required>
                                         <span class="help-block">Utilze preferencialmente uma URL. Ex.: dados.gov.br</span>
                                     </div>
                                 </div>
