--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -66,7 +66,7 @@
       width: 45% !important;
       position:relative;
       margin-top: 20px;
-      border: 3px dashed #304FFE; 
+      border: 3px dashed #545454; 
       border-radius: 25px;
       padding-bottom: 30px;
       margin-right: 30px;
@@ -108,17 +108,26 @@
 
     .buttons{
       display: flex;
-      justify-content: center;
+      justify-content: flex-end;
     }
 
     .separate-buttons-left {
-      margin-left:10vw !important;
       position:relative;
+      top: 18px;
+      margin-right: 10vw;
     }
 
     .separate-buttons-right {
-      margin-right:10vw !important;
       position:relative;
+      margin-right: 10vw;
+      top: 18px;
+    }
+
+    .separate-buttons-preview{
+      position:relative;
+      margin-right: 30vw;
+      top: 18px;
+      float:left;
     }
     
     .breadcrumbs{
@@ -140,3 +149,97 @@
     .modal-header h3{
       direction: ltr !important;
     }
+
+    .footer-custom {
+      background-color: white;
+      width: 83%;
+      height: 80px;
+      box-shadow: 0px -4px 15px 0px rgba(125, 125, 125, 0.76);
+      margin-left: 250px !important;      
+    }
+    
+
+
+    .page-content-wrapper {
+      padding-bottom: 100px !important;
+    }
+
+    #preview-dataset {
+      display: none; 
+      float: right;
+    }
+
+  .popover{
+    max-width:800px !important;   
+    margin-left: 50px !important;
+    z-index:1050 !important;
+  }
+
+  .close-popover{
+    float:right;
+    margin-bottom: 20px;
+  }
+
+  #sidebar-wrapper{
+    background-color: #545454 !important;
+  }
+
+  .sidebar-nav > .sidebar-brand a {
+    color: white !important;
+    font-size: 1.5em;
+    float:left;
+  }
+
+  .sidebar-nav > .side-menu-item a {
+    color: white !important;
+    font-size: 1.3em;
+  }
+
+  .button-adicionar-dataset {
+    background-color:#fd5209 !important;
+    border-color:#fd5209 !important;
+    color:white !important;
+  }
+
+  button-adicionar-dataset:focus{
+    background-color:#fd5209 !important;
+    border-color:#fd5209 !important;
+    color:white !important;
+  }
+
+  .nav-pills>li.active>a, .nav-pills>li.active>a:focus, .nav-pills>li.active>a:hover {
+    color: #fff  !important;
+    background-color: #545454 !important;
+}
+
+  .btn-primary {
+  background-image:  linear-gradient(to bottom, #fd5209, #fd5209) !important;
+  background-color:#fd5209 !important;
+  border-color:#fd5209 !important;
+}
+
+  .btn-warning {
+  background-image:  linear-gradient(to bottom, #669999, #669999) !important;
+  background-color:#669999 !important;
+  border-color:#669999 !important;
+}
+
+  .btn-success {
+  background-image:  linear-gradient(to bottom, #fd5209, #fd5209) !important;
+  background-color:#fd5209 !important;
+  border-color:#fd5209 !important;
+}
+
+.btn-danger{
+    background-image:  linear-gradient(to bottom, #669999, #669999) !important;
+  background-color:#669999 !important;
+  border-color:#669999 !important;
+}
+
+.bootstrap-dialog.type-primary .modal-header {
+    background-color: #545454 !important;
+}
+
+.column-alias{
+  padding-top: 0px !important;
+}
