added email field and validation to cassandra operations

--- a/data_upload/templates/upload_metadata.html
+++ b/data_upload/templates/upload_metadata.html
@@ -113,6 +113,13 @@
                                     </div>
                                 </div>
 
+                                <div class="form-group">
+                                    <label class="col-md-4 control-label" for="source">Email</label>
+                                    <div class="col-md-4">
+                                        <input id="contactEmail" name="source" type="email" placeholder="" class="form-control input-title" required>
+                                    </div>
+                                </div>
+
                             </fieldset>
                         </div>
                     </div>
