finished a bunch of stuff

--- a/data_upload/templates/upload_metadata.html
+++ b/data_upload/templates/upload_metadata.html
@@ -39,6 +39,9 @@
                     <a href="/"> <i class="fa fa-home" aria-hidden="true"></i> Home</a>
                 </li>
                 <li class="side-menu-item">
+                    <a href="/wiki_olap_help"> <i class="fa fa-question-circle" aria-hidden="true"></i> Ajuda</a>
+                </li>
+                <li class="side-menu-item">
                     <a href="/upload_file"> <i class="fa fa-cloud-upload" aria-hidden="true"></i> Enviar Dataset</a>
                 </li>
             </ul>
