making this thing actually usable

--- a/data_upload/templates/upload_metadata.html
+++ b/data_upload/templates/upload_metadata.html
@@ -44,6 +44,9 @@
                 <li class="side-menu-item">
                     <a href="/upload_file"> <i class="fa fa-cloud-upload" aria-hidden="true"></i> Enviar Dataset</a>
                 </li>
+                <li class="side-menu-item">
+                    <a href="/search_metadata"> <i class="fa fa-search" aria-hidden="true"></i> Buscar Datasets</a>
+                </li>
             </ul>
         </div>
         <div class="container-fluid">
