--- a/data_upload/templates/wiki_olap_help.html
+++ b/data_upload/templates/wiki_olap_help.html
@@ -43,13 +43,19 @@
                 <li class="side-menu-item">
                     <a href="/upload_file"> <i class="fa fa-cloud-upload" aria-hidden="true"></i> Enviar Dataset</a>
                 </li>
+                <li class="side-menu-item">
+                    <a href="/search_metadata"> <i class="fa fa-search" aria-hidden="true"></i> Buscar Datasets</a>
+                </li>
             </ul>
         </div>
 
         <div class="container-fluid">
             <div class="breadcrumbs row form-group">
                 <div class="col-xs-12">
-                    <legend><h2>São 4 passos para enviar o seu conjunto de dados! </br> </br>Siga abaixo e aprenda</h2></legend>
+                    <legend>
+                        <h2>São 4 passos para enviar o seu conjunto de dados! </br>
+                            </br>Siga abaixo e aprenda</h2>
+                    </legend>
                     </br>
                     <ul id="wizardId" class="nav nav-pills nav-justified thumbnail setup-panel">
                         <li id="step1Breadcrumb" class="active">
