--- a/data_upload/templates/wiki_olap_home.html
+++ b/data_upload/templates/wiki_olap_home.html
@@ -43,6 +43,9 @@
                 <li class="side-menu-item">
                     <a href="/upload_file"> <i class="fa fa-cloud-upload" aria-hidden="true"></i> Enviar Dataset</a>
                 </li>
+                <li class="side-menu-item">
+                    <a href="/search_metadata"> <i class="fa fa-search" aria-hidden="true"></i> Buscar Datasets</a>
+                </li>
             </ul>
         </div>
 
@@ -60,7 +63,7 @@
                                     </legend>
 
                                 </fieldset>
-                                
+
                                 <div class="home-whoweare">
                                     <h3>O que é?</h3>
                                     O WikiOlap é um repositório integrado que permite o armazenamento de diferentes conjuntos de dados. A partir do processamento
@@ -84,7 +87,7 @@
                                         Envie seu dataset, permita que outros o utilizem, cruze seu dataset com outros do repositório e gere diferente análises e
                                         visualizações. Clique no ícone abaixo!
                                         </br>
-                                        <i style="font-size:100px"  onclick="location.href = '/upload_file'" class="fa fa-cloud-upload"> </i>
+                                        <i style="font-size:100px" onclick="location.href = '/upload_file'" class="fa fa-cloud-upload"> </i>
                                     </div>
                                     <div class="home-help">
                                         <h3> Aprenda a utilizar</h3>
