changed project and apps name - v1.0

--- a/wikiolap_data_upload/templates/wiki_olap_home.html
+++ b/wikiolap_data_upload/templates/wiki_olap_home.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Projeto TCC</title>
+    <title>Bem vindo ao WikiOlap</title>
 
     <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 
