--- a/wikiolap_data_upload/templates/upload_file.html
+++ b/wikiolap_data_upload/templates/upload_file.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Projeto TCC</title>
+    <title>WikiOlap - Enviar dataset</title>
 
     <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 
