--- a/wikiolap_data_upload/templates/upload_metadata.html
+++ b/wikiolap_data_upload/templates/upload_metadata.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Projeto TCC</title>
+    <title>WikiOlap - Metadata</title>
 
     <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
     <link href="{% static 'simple-sidebar.css'%}" rel="stylesheet">
